# difflib-fast

./: .gitignore  Cargo.toml  README.md  benchmarks.md  pyproject.toml
.github/workflows/: CI.yml
benchmarks/: bench_parallel.py  bench_python.py  bench_vs_cydifflib.py  bench_vs_pydifflib.py  profile.sh  run_all.sh  samply_selftime.py
benchmarks/compare/: Cargo.toml
benchmarks/compare/src/: main.rs
benchmarks/cpp/: bench.cpp
examples/: simjoin_bench.rs  simjoin_gpu_bench.rs  simjoin_pypi.rs
python/difflib_fast/: __init__.py  __init__.pyi
src/: gestalt.rs  gpu.rs  lib.rs  rationer.rs  simjoin.rs  simjoin_gpu.rs
tests/: approx_ro.rs
