[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "difflib-fast"
description = "Fast, byte-for-byte exact difflib Ratcliff-Obershelp similarity + clustering."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "prostomarkeloff" }]
keywords = ["difflib", "similarity", "ratcliff-obershelp", "fuzzy", "diff"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/prostomarkeloff/difflib-fast"

[tool.maturin]
features = ["python"]
# mixed layout: the compiled extension is `difflib_fast._difflib_fast`; the Python package under
# `python/difflib_fast/` re-exports it and ships the type stubs (`.pyi`) + `py.typed`.
module-name = "difflib_fast._difflib_fast"
python-source = "python"
